manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: troubleshooting-ingress
  namespace: "82240947"
spec:
  ingressClassName: ingress-internal  # 사용 중인 Ingress Controller에 따라 수정
  rules:
  - host: tr-82240947.ce-aa.kubepia.net  # 도메인 이름 확인
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: troubleshooting  # 서비스 이름 확인
            port:
              number: 8080  # 서비스 포트와 일치
